build: remove hardcoded JAVA_HOME from pre-commit hook
Use make build instead of direct gradlew call. Makefile auto-detects
JAVA_HOME from mise, brew, or environment — no more hardcoded paths.